[package]
name = "markdowner"
version = "1.1.0"
edition = "2021"
description = "A command-line tool that converts code files in a directory to a structured markdown document."

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
walkdir = "2.5.0"
glob = "0.3.1"
chrono = "0.4.38"
indicatif = "0.17.8"
confy = "0.6.1"
serde = { version = "1.0.214", features = ["derive"] }
log = "0.4.22"
